--- a/index.html
+++ b/index.html
@@ -23,35 +23,35 @@
         <hr>
         <div class="clothes-pics">
           <div class="row img-row">
-            <figure class="columns four"><img src="/images/model1.jpg">
+            <figure class="columns four"><img src="images/model1.jpg">
               <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
             </figure>
-            <figure class="columns four"><img src="/images/model2.jpg">
+            <figure class="columns four"><img src="images/model2.jpg">
               <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
             </figure>
-            <figure class="columns four"><img src="/images/model3.jpg">
+            <figure class="columns four"><img src="images/model3.jpg">
               <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
             </figure>
           </div>
           <div class="row img-row">
-            <figure class="columns four"><img src="/images/model3.jpg">
+            <figure class="columns four"><img src="images/model3.jpg">
               <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
             </figure>
-            <figure class="columns four"><img src="/images/model1.jpg">
+            <figure class="columns four"><img src="images/model1.jpg">
               <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
             </figure>
-            <figure class="columns four"><img src="/images/model2.jpg">
+            <figure class="columns four"><img src="images/model2.jpg">
               <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
             </figure>
           </div>
           <div class="row img-row">
-            <figure class="columns four"><img src="/images/model1.jpg">
+            <figure class="columns four"><img src="images/model1.jpg">
               <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
             </figure>
-            <figure class="columns four"><img src="/images/model2.jpg">
+            <figure class="columns four"><img src="images/model2.jpg">
               <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
             </figure>
-            <figure class="columns four"><img src="/images/model3.jpg">
+            <figure class="columns four"><img src="images/model3.jpg">
               <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
             </figure>
           </div>
@@ -122,7 +122,7 @@
         </div>
       </div>
     </footer>
-    <script src="/js/jquery-2.1.3.min.js"></script>
-    <script src="/js/main.min.js"></script>
+    <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
